samples/_failures_safe/1761517902_967983_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af39031b.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_af39031b.c:136:53: error: missing terminating " character
  136 |         "IDLE", "READING", "PROCESSING", "WRITING", "
      |                                                     ^
./samples/SAFE/__tmp_af39031b.c:136:9: error: expected expression at end of input
  136 |         "IDLE", "READING", "PROCESSING", "WRITING", "
      |         ^~~~~~
./samples/SAFE/__tmp_af39031b.c:136:9: error: expected declaration or statement at end of input
